# Audio-to-video-converter-GUI-PysinpleGUI-

./: .replit  Copy_of_crime_model.ipynb  README.md  converter.py  crime_detection.ipynb  gui_.py  pyproject.toml  requirements.txt
