[tool.poetry]
name = "repl_nix_Audio-to-video-converter-GUI-PysinpleGUI-"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
moviepy = "^1.0.3"
PySimpleGUI = "^4.60.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
